<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="MainActivity">

     <EditText
        android:id="@+id/nombreContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_top"
        android:layout_marginLeft="30dp"
        android:hint="@string/nombre" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/mar_top"
        >

    <TextView
        android:id="@+id/etiqueta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:hint="@string/nacimiento"
        android:layout_below="@id/nombreContacto"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@id/etiqueta"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnChangeDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSet"
        android:layout_below="@id/nacimiento"
        android:onClick="showDatePickerDialog" />
    </LinearLayout>

    <EditText
        android:id="@+id/telefonoContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_top"
        android:layout_marginLeft="30dp"
        android:hint="@string/telefono"
        android:layout_below="@id/btnChangeDate"/>

    <EditText
        android:id="@+id/emailContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_top"
        android:layout_marginLeft="30dp"
        android:hint="@string/email"
        android:layout_below="@id/telefonoContacto"/>

    <EditText
        android:id="@+id/descripContacto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mar_top"
        android:layout_marginLeft="30dp"
        android:hint="@string/descripcion"
        android:layout_below="@id/emailContacto"/>
        -->
    <Button
        android:id="@+id/botonSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/btnSiguiente"
        android:layout_marginTop="@dimen/mar_top"
        android:elevation="5dp"
        android:layout_below="@id/descripContacto"/>

</LinearLayout>
